SWU-69 - Fixed a minor layout issue

--- a/swinburne-aem-prototype/source/v2/scss/layout/_footer.scss
+++ b/swinburne-aem-prototype/source/v2/scss/layout/_footer.scss
@@ -199,6 +199,7 @@
     }
 
     @include media-breakpoint-up(lg) {
+      height: 0%;
       width: calc(100% - 258px);
     }
 
